--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pandas = "^1.2.3"
 geopandas = "^0.9.0"
 folium = "^0.12.1"
 polyline = "^1.4.0"
+Flask = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
