--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ geopandas = "^0.9.0"
 folium = "^0.12.1"
 polyline = "^1.4.0"
 Flask = "^2.0.1"
-flask-cors "^3.0.10"
+flask-cors = "^3.0.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
