--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ folium = "^0.12.1"
 polyline = "^1.4.0"
 Flask = "^2.0.1"
 flask-cors = "^3.0.10"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
