--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Gabriela Surita <gsurita@loggi.com>", "Fillipe Goulart <fillipe.mend
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = ">=3.7.1"
+python = "3.8.8"
 numpy = "^1.20.2"
 requests = "^2.25.1"
 dacite = "^1.6.0"
