--- a/app.yaml
+++ b/app.yaml
@@ -14,3 +14,4 @@
 
 runtime: python27
 entrypoint: PYTHONPATH=. poetry gunicorn -b :$5000 "loggibud.v1.baselines.task_optimal_location.api:create_app()"
+threadsafe: true
