--- a/app.yaml
+++ b/app.yaml
@@ -13,5 +13,10 @@
 # limitations under the License.
 
 runtime: python27
+api_version: 1.0
 entrypoint: PYTHONPATH=. poetry gunicorn -b :$5000 "loggibud.v1.baselines.task_optimal_location.api:create_app()"
 threadsafe: true
+
+handlers:
+- url: /(run|get-algorithms|get-regions|get-region-data)
+  script: loggibud.v1.baselines.task_optimal_location.api.create_app
