--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ polyline = "^1.4.0"
 Flask = "^2.0.1"
 flask-cors = "^3.0.10"
 gunicorn = "^20.1.0"
+osmium = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
